fix: complete first-wave phase 1 stabilization plan
harden startup rollback and config parsing behavior
unify configured timezone handling for daily limits and daily picks
improve candidate freshness, profile truthfulness, and conversation semantics
isolate storage state, tighten JDBI internals, and strengthen storage parity
fix JavaFX lifecycle leaks, make signup honest, and reduce profile UI overload
type event payloads, improve BEST_EFFORT failure logging, and expand regression coverage
update the implementation plan with completed task checkmarks